[package]
name = "tenant_reputation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.7"
soroban-pausable = { version = "0.1.0", path = "../soroban_pausable" }
soroban_access_control = { version = "0.1.0", path = "../soroban_access_control" }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
